@@ -74,6 +74,10 @@
 <p>
 
 <h2 id="news">News</h2>
+<p><strong>2026-01-19</strong><br>
+  Release 1.1.1, fixed a couple of super-old bugs related to muting
+  and delaying devices with 24 bit (3 byte) samples.
+</p>
 <p><strong>2025-11-23</strong><br>
   Here's release 1.1.0 and a big refresher of code and
   documentation. BruteFIR was originally developed back in 2000, and
@@ -167,7 +171,7 @@
 
 <h2 id="download">Download</h2>
 <p>
-  You are free to <a href="files/brutefir-1.1.0.tar.gz">download version 1.1.0</a>.
+  You are free to <a href="files/brutefir-1.1.1.tar.gz">download version 1.1.1</a>.
 </p>
 <p>
   For reference, the soruce code is also
